mule-user-guide/v/3.6/using-transformers.adoc
= Using Transformers
:keywords: anypoint studio, studio, transformers


Transformers convert message payloads to formats expected by their destinations. Mule  provides many standard transformers, which you configure using predefined elements and attributes in your Mule XML configuration file. You can also configure custom transformers using the `<custom-transformer>` element, in which you specify the fully-qualified class name of the custom transformer class. For more information on creating and configuring a custom transformer, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/creating-custom-transformers[Creating Custom Transformers].

[TIP]
The most powerful tool for transforming a message is the link:https://docs.mulesoft.com/mule-user-guide/v/3.8/dataweave[DataWeave Transformer], which cannot only change the format of the message, but also rename, aggregate, split, or rearrange the fields in it in any way you desire.

Standard transformers are easier to use than custom transformers. You don't need to know the Java name of the transformer, and all properties are explicitly declared in a Mule configuration schema. Following is an example of declaring the standard Append String transformer, which appends string text to the original message payload:

[source,xml]
----
<append-string-transformer name="myAppender" message=" ... that's good to know!"/>
----

If the original message payload was the string "foo", the transformer above would convert the string to "foo ... that's good to know!".

The <<Available Transformers>> section of this page describes all the standard transformers provided with Mule. Additionally, many link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transports-reference[transports] and link:https://docs.mulesoft.com/mule-user-guide/v/3.6/modules-reference[modules] have their own transformers, such as the ObjectToJMSMessage transformer for the JMS transport.

== Configuring Transformers

You can configure a transformer _locally_ or _globally_. You configure a local transformer right on the endpoint or in a flow or where you want to apply it, whereas you configure a global transformer before any `<model>` or `<flow>` elements in your Mule configuration file and then reference it.

For example, the following code defines two global transformers, which are referenced from two different places:

[source,xml, linenums]
----
<xm:xml-to-object-transformer name="XMLToExceptionBean" returnClass="org.mule.example.errorhandler.ExceptionBean"/>
<custom-transformer name="ExceptionBeanToErrorMessage" class="org.mule.example.errorhandler.ExceptionBeanToErrorMessage"
returnClass="org.mule.example.errorhandler.ErrorMessage"/>
 
...
<flow name="Error Manager">
  <inbound-endpoint address="file://./test-data/in" transformer-refs="XMLToExceptionBean ExceptionBeanToErrorMessage">
    <file:filename-wildcard-filter pattern="*.xml" />
  </inbound-endpoint>
    ...
</flow>
...
<flow name="Business Error Manager">
  <inbound-endpoint address="jms://exception.queue"/>
  <transformer ref="XMLToExceptionBean"/>
  <transformer ref="ExceptionBeanToErrorMessage"/>
  ...
</flow>
----

== Chaining Transformers

You can chain transformers together so that the output from one transformer becomes the input for the next. To chain transformers, you create a space-separated list of transformers in the `transformer-refs` or `responseTransformer-refs` attributes or by creating multiple `<transformer>` elements as shown above.

For example, this chain ultimately converts from a ByteArray to InputStream:

[source]
----
transformer-refs="ByteArrayToString StringToObject ObjectToInputStream"
----

You could also configure this as follows:

[source,xml, linenums]
----
<transformer ref="ByteArrayToString"/>
<transformer ref="StringToObject"/>
<transformer ref="ObjectToInputStream"/>
----

Note that if you specify transformer chains, any default transformers or discoverable transformers are not applied. If you want to use those transformers, you must specify them explicitly with the other chained transformers.

== Transformation Best Practices

Mule has an efficient transformation mechanism. Transformers are applied to inbound or outbound endpoints, and the data is transformed just before it is sent or received from an endpoint. Transformers can be concatenated, so it is simple to perform multiple transformations on data in transit.

There is no one standard approach for how and where transformations should occur. Some maintain that because transformation should always be applied on inbound/outbound data, transformations should be available as part of the enterprise service bus instead of inside the components. This approach matches the concepts of Aspect Oriented Programming (AOP). Others conclude that it is far more efficient to encode the transformation logic into the components themselves. In the second case, however, there is no distinction between code that is related to a business process and code that is generic enough to be reused, which contradicts the philosophy of an ESB.

While there is no industry best practice, MuleSoft recommends that developers examine their transformation logic to see if it will always be used (AOP) or if it is specific to a business process. In general, if it will always be used, you should use a transformer, and if it is specific to a single business process, it should be part of the component.

Note the following cases where you should *not* configure a transformer:

* Default transformers: some transports have default transformers that are called by default, but only if you don't configure explicit transformations.
* Discoverable transformers: some transformers can be discovered and used automatically based on the type of message. You do not configure these transformers explicitly. These include custom transformers that have been defined as discoverable. For more information, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/creating-custom-transformers[Creating Custom Transformers].

*References:* 

* link:http://msdn2.microsoft.com/en-us/library/aa480061.aspx[Messaging Patterns in Service Oriented Architecture, Part 2]
* link:http://it.toolbox.com/blogs/composite-apps/transformation-in-a-soa-12186[Transformation in a SOA]

== Available Transformers

Following are the transformers available with Mule. Some transformers are specific to a transport or module. For more information, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transports-reference[Transports Reference] and link:https://docs.mulesoft.com/mule-user-guide/v/3.6/modules-reference[Modules Reference]. For a complete reference to the elements and attributes for the standard Mule transformers, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transformers-configuration-reference[Transformers Configuration Reference].

=== Basic

The basic transformers are in the link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transformer/simple/package-summary.html[org.mule.transformer.simple] package. They do not require any special configuration. For details on these transformers, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transformers-configuration-reference[Transformers Configuration Reference].

[%header,cols="2*"]
|===
|Transformer |Description
|BeanBuilderTransformer a|
Constructs simple bean objects by defining the object and then setting a number of expressions used to populate the bean properties. For example:

[source,xml, linenums]
----
<bean-builder-transformer name="testTransformer3" beanClass="org.mule.test.fruit.Orange">
  <bean-property property-name="brand" evaluator="mule" expression="message.payload" optional="true"/>
  <bean-property property-name="segments" evaluator="mule" expression="message.header(SEGMENTS)"/>
</bean-builder-transformer>
----

|ByteArrayToHexString < - > +
 HexStringToByteArray |A pair of transformers that convert between byte arrays and hex strings.
|ByteArrayToMuleMessage < - > +
 MuleMessageToByteArray |A pair of transformers that convert between byte arrays and Mule messages.
|ByteArrayToObject < - > +
 ObjectToByteArray |A pair of transformers that convert between byte arrays and objects. If the byte array is not serialized, ByteArrayToObject returns a String created from the bytes as the returnType on the transformer.
|ByteArrayToSerializable < - > +
 SerializableToByteArray |A pair of transformers that serialize and deserialize objects.
|CombineCollectionsTransformer |Takes a payload which is a Collection of Collections and turns into a single List. For example, if the payload is a Collection which contains a Collection with elements A and B and another Collection with elements C and D, this  turns them into a single Collection with elements A, B, C, and D.
|ExpressionTransformer |Evaluates one or more expressions on the current message and return the results as an Array. For details, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/mule-expression-language-mel[Mule Expression Language MEL].
|MessagePropertiesTransformer |A configurable message transformer that allows users to add, overwrite, and delete properties on the current message.
|ObjectArrayToString < - > +
 StringToObjectArray |A pair of transformers that convert between object arrays and strings. Use the configuration elements `<byte-array-to-string-transformer>` and `<string-to-byte-array-transformer>`.
|ObjectToInputStream |Converts serializable objects to an input stream but treats java.lang.String differently by converting to bytes using the String.getBytes() method.
|ObjectToOutputHandler |Converts a byte array into a String.
|ObjectToString |Returns human-readable output for various kinds of objects. Useful for debugging.
|StringAppendTransformer |Appends a string to an existing string.
|StringToObjectArray |Converts a string to an object array. Use the configuration element `<string-to-byte-array-transformer>`.
|===

=== XML

The XML transformers are in the 
link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/module/xml/transformer/package-summary.html[org.mule.module.xml.transformer] 
package. They provide the ability to transform between different XML formats, use XSLT, and convert to POJOs from XML. For information, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xml-module-reference[XML Module Reference].

[%header,cols="2*"]
|===
|Transformer |Description
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xmlobject-transformers[XmlToObject < - > ObjectToXml] |Converts XML to a Java object and back again using link:http://x-stream.github.io/[XStream].
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jaxb-transformers[JAXB XmlToObject < - > JAXB ObjectToXml] |Converts XML to a Java object and back again using the link:http://java.sun.com/developer/technicalArticles/WebServices/jaxb/[JAXB] binding framework.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xslt-transformer[XSLT] |Transforms XML payloads using XSLT.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xquery-transformer[XQuery] |Transforms XML payloads using http://en.wikipedia.org/wiki/XQuery[XQuery].
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/domtoxml-transformer[DomToXml < - > XmlToDom] |Converts DOM objects to XML and back again.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader] |Converts XML from a message payload to a StAX XMLStreamReader.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xpath-extractor-transformer[XPath Extractor] |Queries and extracts object graphs using XPath expressions using JAXP.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jxpath-extractor-transformer[JXPath Extractor] |Queries and extracts object graphs using XPath expressions using JXPath.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xmlprettyprinter-transformer[XmlPrettyPrinter] |Allows you to output the XML with controlled formatting, including trimming white space and specifying the indent.
|===

=== JSON

The JSON transformers are in the link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/module/json/transformers/package-summary.html[org.mule.module.json.transformers] package. They provide the ability to work with JSON documents and bind them automatically to Java objects. For information, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/native-support-for-json[Native Support for JSON].

=== Scripting

The link:https://docs.mulesoft.com/mule-user-guide/v/3.6/scripting-module-reference[Scripting] transformer transforms objects using scripting, such as JavaScript or link:http://www.groovy-lang.org/[Groovy] scripts. This transformer is in the
link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/module/scripting/transformer/package-summary.html[org.mule.module.scripting.transformer] package.

=== Encryption

The encryption transformers are in the link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transformer/encryption/package-summary.html[org.mule.transformer.encryption] package.

[%header,cols="2*"]
|===
|Transformer |Description
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transformers-configuration-reference[Encryption < - > Decryption] |A pair of transformers that use a configured EncryptionStrategy implementation to encrypt and decrypt data.
|===

=== Compression

The compression transformers are in the link:http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transformer/compression/package-summary.html[org.mule.transformer.compression] package. They do not require any special configuration.

[%header,cols="2*"]
|===
|Transformer |Description
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transformers-configuration-reference[GZipCompressTransformer < - > GZipUncompressTransformer] |A pair of transformers that compress and uncompress data.
|===

=== Encoding

The encoding transformers are in the 
http://www.mulesoft.org/docs/site/3.6.0/apidocs/org/mule/transformer/codec/package-summary.html[org.mule.transformer.codec]
package. They do not require any special configuration.

[%header,cols="2*"]
|===
|Transformer |Description
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transformers-configuration-reference[Base64Encoder <-> Base64Decoder] |A pair of transformers that convert to and from Base 64 encoding.
|link:https://docs.mulesoft.com/mule-user-guide/v/3.6/transformers-configuration-reference[XMLEntityEncoder <-> XMLEntityDecoder] |A pair of transformers that convert to and from XML entity encoding.
|===

=== Email

The Email transport provides several transformers for converting from email to string, object to MIME, and more. For details, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/email-transport-reference[Email Transport Reference].

=== File

The File transport provides transformers for converting from a file to a byte array (byte[]) or a string. For details, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/file-transport-reference[File Transport Reference].

=== HTTP

The HTTP connector provides several transformers for converting an HTTP response to a Mule message, map or string, and for converting a message to an HTTP request or response. For details, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/http-connector[HTTP Connector].

=== JDBC +
_*Enterprise*_

The Mule Enterprise version of the JDBC transport provides transformers for moving CSV and XML data from files to databases and back. For details, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jdbc-transport-reference[JDBC Transport Reference].

=== JMS

The link:https://docs.mulesoft.com/mule-user-guide/v/3.6/jms-transport-reference[JMS Transport Reference] and link:https://docs.mulesoft.com/mule-user-guide/v/3.6/mule-wmq-transport-reference[Mule WMQ Transport Reference] (enterprise only) both provide transformers for converting between JMS messages and several different data types.

=== Strings and Byte Arrays

The link:https://docs.mulesoft.com/mule-user-guide/v/3.6/multicast-transport-reference[Multicast Transport Reference] and link:https://docs.mulesoft.com/mule-user-guide/v/3.6/tcp-transport-reference[TCP Transport Reference] both provide transformers that convert between byte arrays and strings.

=== XMPP

The XMPP transport provides transformers for converting between XMPP packets and strings. For details, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xmpp-transport-reference[XMPP Transport Reference].

=== Custom

Mule supports the ability to build link:https://docs.mulesoft.com/mule-user-guide/v/3.6/creating-custom-transformers[Custom Transformer]. Build custom transformers to meet specific data conversion needs in your application.

== Common Attributes

Following are the attributes that are common to all transformers.

=== returnClass

This specifies the name of the Java class that the transformer returns.

=== ignoreBadInput

If set to true, the transformer  ignores any data that it does not know how to transform, but any transformers following it in the current chain will be called. If set to false, the transformer will also ignore any data that it does not know how to transform, but no further transformations will take place.

=== mimeType

This MIME type is set on all messages that this transformer produces.

=== encoding

This encoding is set on all messages that this transformer produces.
